--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Muhamad Fajar</title>
     <link rel="shortcut icon" href="img/icon2.png">
     <link rel="stylesheet" href="css/style.css">
@@ -32,7 +33,7 @@
 <!-- isi home -->
     <div class="container mt-5">
       <div class="row">
-        <div class="col-md-6 judulweb justify-content-center mt-5">
+        <div class="col-sm-6 judulweb justify-content-center mt-5">
           <p class="font-hi">Hi, Im</p>
           <p class="font-mf">Muhamad Fajar</p>
           <p class="font-ket">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
@@ -41,14 +42,14 @@
           <a href="#"><ion-icon name="logo-youtube" size="large"></ion-icon></a>
           <a href="#"><ion-icon name="logo-linkedin" size="large"></ion-icon></a>
         </div>
-        <div class="col-md-6 d-flex justify-content-center img-logo">
+        <div class="col-sm-6 d-flex justify-content-center img-logo">
           <img src="img/icon2.png" alt="">
         </div>
       </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/usm/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
   </body>
