--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
     </div>
 <!-- isi home -->
-    <div class="container mt-5">
+    <div class="container mt-about">
       <div class="row">
         <div class="col-sm-6 judulweb justify-content-center mt-5">
           <p class="font-hi">Hi, Im</p>
@@ -43,7 +43,57 @@
           <a href="#"><ion-icon name="logo-linkedin" size="large"></ion-icon></a>
         </div>
         <div class="col-sm-6 d-flex justify-content-center img-logo">
-          <img src="img/icon2.png" alt="">
+          <img src="img/icon3.png" alt="">
+        </div>
+      </div>
+    </div>
+<!-- About -->
+    <div class="container mt-about">
+      <p class="font-hi-about">About Me</p>
+      <div class="row mt-3">
+        <div class="col-md-6 d-flex justify-content-center">
+          <img src="img/back.jpg" alt="" width="400">
+        </div>
+        <div class="col-md-6 d-flex justify-content-center">
+          <p class="font-ket">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+<!-- Skill -->
+    <div class="container mt-about">
+      <p class="font-hi-about">Skill</p>
+      <div class="row">
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/html-5.svg" alt="" width="50">
+            </div>
+            <div class="card-footer d-flex justify-content-center">
+             <small class="text-muted font-ket">HTML 5</small>
+           </div>
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/css3.svg" alt="" width="70">
+            </div>
+            <div class="card-footer d-flex justify-content-center">
+             <small class="text-muted font-ket">CSS 3</small>
+           </div>
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/php-1.svg" alt="" width="130">
+            </div>
+            <div class="card-footer d-flex justify-content-center">
+             <small class="text-muted font-ket">PHP</small>
+           </div>
+          </div>
         </div>
       </div>
     </div>
