--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navigasii">
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-          <a class="navbar-brand judulweb" href="#">MuhamadFajar</a>
+          <a class="navbar-brand judulweb" href="index.html">MuhamadFajar</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobilenav" aria-controls="mobilenav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,6 +23,14 @@
               <a class="nav-item nav-link" href="#">Home</a>
               <a class="nav-item nav-link" href="#">About</a>
               <a class="nav-item nav-link" href="#">Skill</a>
+              <div class="dropdown">
+                <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>Projek</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="programing.html">Programming</a>
+                  <a class="dropdown-item" href="#">Design</a>
+                  <a class="dropdown-item" href="#">Fotografi</a>
+                </div>
+              </div>
               <a class="nav-item nav-link" href="#">Contact</a>
               <a class="nav-item btn-biru" href="#">Download CV</a>
             </div>
@@ -62,41 +70,125 @@
 <!-- Skill -->
     <div class="container mt-about">
       <p class="font-hi-about">Skill</p>
+      <p class="font-ket">Programing</p>
       <div class="row">
         <div class="col-sm-2">
           <div class="card">
             <div class="card-body d-flex justify-content-center">
-              <img src="img/html-5.svg" alt="" width="50">
-            </div>
-            <div class="card-footer d-flex justify-content-center">
-             <small class="text-muted font-ket">HTML 5</small>
-           </div>
+              <img src="img/html-5.svg" alt="" width="46">
+            </div><hr>
+            <p class="text-muted font-ket text-center">HTML 5</p>
           </div>
         </div>
 
         <div class="col-sm-2">
           <div class="card">
             <div class="card-body d-flex justify-content-center">
-              <img src="img/css3.svg" alt="" width="70">
-            </div>
-            <div class="card-footer d-flex justify-content-center">
-             <small class="text-muted font-ket">CSS 3</small>
-           </div>
+              <img src="img/css3.svg" alt="" width="66">
+            </div><hr>
+            <p class="text-muted font-ket text-center">CSS 3</p>
           </div>
         </div>
 
         <div class="col-sm-2">
           <div class="card">
             <div class="card-body d-flex justify-content-center">
-              <img src="img/php-1.svg" alt="" width="130">
-            </div>
-            <div class="card-footer d-flex justify-content-center">
-             <small class="text-muted font-ket">PHP</small>
-           </div>
+              <img src="img/php-1.svg" alt="" width="126">
+            </div><hr>
+            <p class="text-muted font-ket text-center">PHP</p>
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/javascript.svg" alt="" width="65">
+            </div><hr>
+            <p class="text-muted font-ket text-center">Javascript</p>
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/laravel-2.svg" alt="" width="65">
+            </div><hr>
+            <p class="text-muted font-ket text-center">Laravel 8</p>
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/bootstrap-4.svg" alt="" width="65">
+            </div><hr>
+            <p class="text-muted font-ket text-center text-center">Bootstrap 4</p>
+        </div>
+      </div>
+      </div>
+
+      <p class="font-ket mt-3">UI/UX</p>
+      <div class="row">
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/adobe-xd-1.svg" alt="" width="66">
+            </div><hr>
+            <p class="text-muted font-ket text-center">Adobe XD</p>
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/figma-1.svg" alt="" width="44">
+            </div><hr>
+            <p class="text-muted font-ket text-center">Figma</p>
+          </div>
+        </div>
+      </div>
+
+
+      <p class="font-ket mt-3">Editing</p>
+      <div class="row">
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/premiere-cc.svg" alt="" width="65">
+            </div><hr>
+            <p class="text-muted font-ket text-center">Adobe Premiere</p>
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/lightroom-cc.svg" alt="" width="65">
+            </div><hr>
+            <p class="text-muted font-ket text-center">Adobe <L></L>ightroom</p>
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body d-flex justify-content-center">
+              <img src="img/photoshop-cc.svg" alt="" width="65">
+            </div><hr>
+            <p class="text-muted font-ket text-center">Adobe Photoshop</p>
           </div>
         </div>
       </div>
     </div>
+
+<!-- footer -->
+    <div class="footer mt-about">
+      <footer class="page-footer font-small bg-white">
+        <div class="footer-copyright text-center py-3 font-ket">© 2020 Copyright:
+          <a href="index.html" class="navbar-brand judulweb"> MuhamadFajar</a>
+        </div>
+      </footer>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/usm/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
