--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
           <div class="collapse navbar-collapse" id="mobilenav">
             <div class="navbar-nav ml-auto" >
-              <a class="nav-item nav-link" href="#">Home</a>
-              <a class="nav-item nav-link" href="#">About</a>
-              <a class="nav-item nav-link" href="#">Skill</a>
+              <a class="nav-item nav-link" href="index.html">Home</a>
+              <a class="nav-item nav-link" href="#about">About</a>
+              <a class="nav-item nav-link" href="#skill">Skill</a>
               <div class="dropdown">
                 <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>Projek</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -32,7 +32,7 @@
                 </div>
               </div>
               <a class="nav-item nav-link" href="#">Contact</a>
-              <a class="nav-item btn-biru" href="#">Download CV</a>
+              <a class="nav-item btn-biru" href="pdf/cv.pdf" target="_blank">Download CV</a>
             </div>
           </div>
         </div>
@@ -56,7 +56,7 @@
       </div>
     </div>
 <!-- About -->
-    <div class="container mt-about">
+    <div class="container mt-about" id="about">
       <p class="font-hi-about">About Me</p>
       <div class="row mt-3">
         <div class="col-md-6 d-flex justify-content-center">
@@ -68,7 +68,7 @@
       </div>
     </div>
 <!-- Skill -->
-    <div class="container mt-about">
+    <div class="container mt-about" id="skill">
       <p class="font-hi-about">Skill</p>
       <p class="font-ket">Programing</p>
       <div class="row">
