--- a/programing.html
+++ b/programing.html
@@ -20,9 +20,9 @@
 
           <div class="collapse navbar-collapse" id="mobilenav">
             <div class="navbar-nav ml-auto" >
-              <a class="nav-item nav-link" href="#">Home</a>
-              <a class="nav-item nav-link" href="#">About</a>
-              <a class="nav-item nav-link" href="#">Skill</a>
+              <a class="nav-item nav-link" href="index.html">Home</a>
+              <a class="nav-item nav-link" href="#about">About</a>
+              <a class="nav-item nav-link" href="#skill">Skill</a>
               <div class="dropdown">
                 <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>Projek</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -32,7 +32,7 @@
                 </div>
               </div>
               <a class="nav-item nav-link" href="#">Contact</a>
-              <a class="nav-item btn-biru" href="#">Download CV</a>
+              <a class="nav-item btn-biru" href="pdf/cv.pdf" target="_blank">Download CV</a>
             </div>
           </div>
         </div>
