--- a/index.html
+++ b/index.html
@@ -1,190 +1,178 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Muhamad Fajar</title>
-    <link rel="shortcut icon" href="img/icon2.png">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lobster&family=Pacifico&family=Zilla+Slab&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Muhamad Fajar</title>
+  <link rel="shortcut icon" href="img/icon2.png">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lobster&family=Pacifico&family=Zilla+Slab&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
   <body class="background">
     <div class="navigasii">
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-          <a class="navbar-brand judulweb" href="index.html">MuhamadFajar</a>
+          <a class="navbar-brand judulweb" href="index.html" >MuhamadFajar</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobilenav" aria-controls="mobilenav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="mobilenav">
             <div class="navbar-nav ml-auto" >
-              <a class="nav-item nav-link" href="index.html">Home</a>
-              <a class="nav-item nav-link" href="#about">About</a>
-              <a class="nav-item nav-link" href="#skill">Skill</a>
+              <a class="nav-item nav-link text-black" href="index.html">Home</a>
               <div class="dropdown">
                 <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>Projek</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <a class="dropdown-item" href="programing.html">Programming</a>
-                  <a class="dropdown-item" href="#">Design</a>
-                  <a class="dropdown-item" href="#">Fotografi</a>
+                  <a class="dropdown-item" href="ui-ux.html">UI/UX</a>
+                  <a class="dropdown-item" href="photography.html">Photography</a>
                 </div>
               </div>
-              <a class="nav-item nav-link" href="#">Contact</a>
+              <a class="nav-item nav-link" href="mailto:fajarramdhan2018@gmail.com" target="_blank">Contact</a>
               <a class="nav-item btn-biru" href="pdf/cv.pdf" target="_blank">Download CV</a>
             </div>
           </div>
+
         </div>
       </nav>
     </div>
 <!-- isi home -->
-    <div class="container mt-about">
-      <div class="row">
-        <div class="col-sm-6 judulweb justify-content-center mt-5">
-          <p class="font-hi">Hi, Im</p>
-          <p class="font-mf">Muhamad Fajar</p>
-          <p class="font-ket">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-          <a href="#"><ion-icon name="logo-github" size="large"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-instagram" size="large"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-youtube" size="large"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-linkedin" size="large"></ion-icon></a>
-        </div>
-        <div class="col-sm-6 d-flex justify-content-center img-logo">
-          <img src="img/icon3.png" alt="">
-        </div>
+    <div class="container-fluid" style="background :#0089ff; color : white;">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 judulweb justify-content-center mt-main mb-10">
+            <p class="font-hi">Hi, Im</p>
+            <p class="font-mf">Muhamad Fajar</p>
+            <p class="font-ket">I am a student at STMIK Kota Tasikmalaya, Department of Informatics</p>
+            <a href="https://github.com/Jarramdhan28" target="_blank"><ion-icon name="logo-github" size="large"></ion-icon></a>
+            <a href="https://www.instagram.com/jarramdhan/" target="_blank"><ion-icon name="logo-instagram" size="large"></ion-icon></a>
+            <a href="https://youtu.be/l9FvmFvnCyk" target="_blank"><ion-icon name="logo-youtube" size="large"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/muhamad-fajar-ramdhan-ginawan-364b581ba/" target="_blank"><ion-icon name="logo-linkedin" size="large"></ion-icon></a>
+          </div>
+          <div class="col-sm-6 d-flex justify-content-center img-logo mt-main2">
+            <img src="img/2.png" alt=""sss>
+          </div>
+        </div><hr class="">
       </div>
     </div>
+
 <!-- About -->
-    <div class="container mt-about" id="about">
-      <p class="font-hi-about">About Me</p>
+    <div class="container mt-5" id="about">
       <div class="row mt-3">
-        <div class="col-md-6 d-flex justify-content-center">
-          <img src="img/back.jpg" alt="" width="400">
+        <div class="col-md-4">
+          <p class="font-hi-about">About Me</p>
         </div>
-        <div class="col-md-6 d-flex justify-content-center">
-          <p class="font-ket">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col-md-8 d-flex justify-content-center">
+          <p class="font-ket">Perkenalkan Nama Lengkap Saya <b>Muhamad Fajar Ramdhan Ginawan</b>. Saya Tinggal Di Ciamis, Jawa Barat. </p>
         </div>
-      </div>
+      </div><hr>
     </div>
 <!-- Skill -->
-    <div class="container mt-about" id="skill">
-      <p class="font-hi-about">Skill</p>
-      <p class="font-ket">Programing</p>
+    <div class="container mt-2" id="skill">
       <div class="row">
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/html-5.svg" alt="" width="46">
-            </div><hr>
-            <p class="text-muted font-ket text-center">HTML 5</p>
-          </div>
+        <div class="col-md-4">
+          <p class="font-hi-about">Skill</p>
         </div>
+        <div class="col-md-8">
+          <p class="font-ket">Programing</p>
+          <div class="row">
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/html-5.svg" alt="" width="46" height="65">
+                </div>
+              </div>
+            </div>
 
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/css3.svg" alt="" width="66">
-            </div><hr>
-            <p class="text-muted font-ket text-center">CSS 3</p>
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/css3.svg" alt="" width="66" height="65">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/php-1.svg" alt="" width="80" height="65">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/laravel-2.svg" alt="" width="65" height="65">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/bootstrap-4.svg" alt="" width="65" height="65">
+                </div>
+            </div>
           </div>
-        </div>
-
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/php-1.svg" alt="" width="126">
-            </div><hr>
-            <p class="text-muted font-ket text-center">PHP</p>
           </div>
-        </div>
 
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/javascript.svg" alt="" width="65">
-            </div><hr>
-            <p class="text-muted font-ket text-center">Javascript</p>
+          <p class="font-ket mt-3">UI/UX</p>
+          <div class="row">
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/adobe-xd-1.svg" alt="" width="66" height="65">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/figma-1.svg" alt="" width="44" height="65">
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
 
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/laravel-2.svg" alt="" width="65">
-            </div><hr>
-            <p class="text-muted font-ket text-center">Laravel 8</p>
+          <p class="font-ket mt-3">Editing</p>
+          <div class="row">
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/premiere-cc.svg" alt="" width="65">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/lightroom-cc.svg" alt="" width="65">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-2">
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img src="img/skil/photoshop-cc.svg" alt="" width="65">
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
 
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/bootstrap-4.svg" alt="" width="65">
-            </div><hr>
-            <p class="text-muted font-ket text-center text-center">Bootstrap 4</p>
-        </div>
-      </div>
-      </div>
-
-      <p class="font-ket mt-3">UI/UX</p>
-      <div class="row">
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/adobe-xd-1.svg" alt="" width="66">
-            </div><hr>
-            <p class="text-muted font-ket text-center">Adobe XD</p>
-          </div>
-        </div>
-
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/figma-1.svg" alt="" width="44">
-            </div><hr>
-            <p class="text-muted font-ket text-center">Figma</p>
-          </div>
-        </div>
-      </div>
-
-
-      <p class="font-ket mt-3">Editing</p>
-      <div class="row">
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/premiere-cc.svg" alt="" width="65">
-            </div><hr>
-            <p class="text-muted font-ket text-center">Adobe Premiere</p>
-          </div>
-        </div>
-
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/lightroom-cc.svg" alt="" width="65">
-            </div><hr>
-            <p class="text-muted font-ket text-center">Adobe <L></L>ightroom</p>
-          </div>
-        </div>
-
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body d-flex justify-content-center">
-              <img src="img/photoshop-cc.svg" alt="" width="65">
-            </div><hr>
-            <p class="text-muted font-ket text-center">Adobe Photoshop</p>
-          </div>
         </div>
       </div>
     </div>
 
 <!-- footer -->
-    <div class="footer mt-about">
-      <footer class="page-footer font-small bg-white">
+    <div class="footer mt-about" >
+      <footer class="page-footer font-small " style="background :#0089ff; color:white;">
         <div class="footer-copyright text-center py-3 font-ket">© 2020 Copyright:
-          <a href="index.html" class="navbar-brand judulweb"> MuhamadFajar</a>
+          <a href="index.html" class="navbar-brand judulweb text-white"> MuhamadFajar</a>
         </div>
       </footer>
     </div>
