--- a/ui-ux.html
+++ b/ui-ux.html
@@ -37,20 +37,17 @@
       </nav>
     </div>
 <!-- isi home -->
+
     <div class="container mt-5">
-      <p class="font-hi">Projek Programming</p><hr>
+      <p class="font-hi">Projek UI/UX</p><hr>
       <div class="row">
         <div class="col-md-6">
-          <p class="font-ket">Portofolio</p>
-          <img src="img/prjProgramming1.png" alt="" class="border image-hover" width="350">
-        </div>
-
-        <div class="col-md-6">
-          <p class="font-ket">Perpustakaan Online</p>
-          <img src="img/prjProgramming2.png" alt="" class="border image-hover" width="350">
+          <p class="font-ket">Portofolio Desain V2</p>
+          <img src="img/ui-ux/desain1.png" alt="" class="border image-hover" width="350">
         </div>
       </div>
     </div>
+
 
 <!-- footer -->
     <div class="footer mt-about">
