--- a/photography.html
+++ b/photography.html
@@ -37,20 +37,32 @@
       </nav>
     </div>
 <!-- isi home -->
-    <div class="container mt-5">
-      <p class="font-hi">Projek Programming</p><hr>
-      <div class="row">
-        <div class="col-md-6">
-          <p class="font-ket">Portofolio</p>
-          <img src="img/prjProgramming1.png" alt="" class="border image-hover" width="350">
-        </div>
 
-        <div class="col-md-6">
-          <p class="font-ket">Perpustakaan Online</p>
-          <img src="img/prjProgramming2.png" alt="" class="border image-hover" width="350">
+    <div class="container mt-5">
+      <p class="font-hi">Photography</p><hr>
+      <!-- galeri -->
+      <div class="container mt-3">
+      <div class="row">
+      <div class="col-md-12 mt-3">
+        <div class="card">
+          <center>
+          <div id="imgBig" class="mt-4">
+            <img src="img/photo/photo3.jpg" class="img-fluid" width="600">
+          </div>
+          </center>
+          <div class="card-body">
+            <div class="row">
+              <div class="col imgSmall"><img src="img/photo/photo.jpg" class="img-fluid"></div>
+              <div class="col imgSmall px-0"><img src="img/photo/photo3.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/photo2.jpg" class="img-fluid"></div>
+            </div>
+          </div>
         </div>
       </div>
+      </div>
+      </div>
     </div>
+
 
 <!-- footer -->
     <div class="footer mt-about">
@@ -66,5 +78,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/usm/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+
+        <!-- jQuery first Code -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        $('.imgSmall img').click(function(event) {
+          var id = $(this).data('id');
+          var src = $(this).attr('src');
+          var img = $('#imgBig img');
+
+          img.fadeOut('fast', function() {
+            $(this).attr({src: src,});
+            $(this).fadeIn('fast');
+          });
+        });
+      });
+    </script>
+
   </body>
 </html>
