--- a/photography.html
+++ b/photography.html
@@ -47,13 +47,13 @@
         <div class="card">
           <center>
           <div id="imgBig" class="mt-4">
-            <img src="img/photo/photo3.jpg" class="img-fluid" width="600">
+            <img src="img/photo/photo3.JPG" class="img-fluid" width="600">
           </div>
           </center>
           <div class="card-body">
             <div class="row">
               <div class="col imgSmall"><img src="img/photo/photo.jpg" class="img-fluid"></div>
-              <div class="col imgSmall px-0"><img src="img/photo/photo3.jpg" class="img-fluid"></div>
+              <div class="col imgSmall px-0"><img src="img/photo/photo3.JPG" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/photo2.jpg" class="img-fluid"></div>
             </div>
           </div>
