--- a/photography.html
+++ b/photography.html
@@ -46,15 +46,35 @@
       <div class="col-md-12 mt-3">
         <div class="card">
           <center>
-          <div id="imgBig" class="mt-4">
-            <img src="img/photo/photo3.JPG" class="img-fluid" width="600">
+          <div id="imgBig" class="mt-3">
+            <img src="img/photo/photo3.JPG" class="img-fluid" width="400">
           </div>
           </center>
           <div class="card-body">
-            <div class="row">
+            <div class="row ">
               <div class="col imgSmall"><img src="img/photo/photo.jpg" class="img-fluid"></div>
               <div class="col imgSmall px-0"><img src="img/photo/photo3.JPG" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/photo2.jpg" class="img-fluid"></div>
+            </div>
+
+            <div class="row mt-2">
+              <div class="col imgSmall"><img src="img/photo/photo5.jpg" class="img-fluid"></div>
+              <div class="col imgSmall px-0"><img src="img/photo/photo1.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/photo4.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/photo6.jpg" class="img-fluid"></div>
+            </div>
+
+            <div class="row mt-2">
+              <div class="col imgSmall"><img src="img/photo/photo8.jpg" class="img-fluid"></div>
+              <div class="col imgSmall px-0"><img src="img/photo/photo7.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/photo9.jpg" class="img-fluid"></div>
+            </div>
+
+            <div class="row mt-2">
+              <div class="col imgSmall"><img src="img/photo/10.jpg" class="img-fluid"></div>
+              <div class="col imgSmall px-0"><img src="img/photo/11.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/13.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/12.jpg" class="img-fluid"></div>
             </div>
           </div>
         </div>
