--- a/programing.html
+++ b/programing.html
@@ -30,7 +30,7 @@
                 </div>
               </div>
                 <a class="nav-item nav-link" href="mailto:fajarramdhan2018@gmail.com" target="_blank">Contact</a>
-              <a class="nav-item btn-biru" href="pdf/cv.pdf" target="_blank">Download CV</a>
+              <a class="nav-item btn-biru" href="pdf/Cv-MuhamadFajarRamdhanGinawan.pdf" target="_blank">Download CV</a>
             </div>
           </div>
         </div>
@@ -41,13 +41,20 @@
       <p class="font-hi">Projek Programming</p><hr>
       <div class="row">
         <div class="col-md-6">
-          <p class="font-ket">Portofolio</p>
-          <img src="img/prjProgramming1.png" alt="" class="border image-hover" width="350">
+          <p class="font-ket">Web Aplikasi Bus Pariwisata</p>
+          <img src="img/prog/1.jpg" alt="" class="border image-hover" width="350">
         </div>
 
         <div class="col-md-6">
           <p class="font-ket">Perpustakaan Online</p>
-          <img src="img/prjProgramming2.png" alt="" class="border image-hover" width="350">
+          <img src="img/prog/prjProgramming2.png" alt="" class="border image-hover" width="350">
+        </div>
+      </div>
+
+      <div class="row mt-2">
+        <div class="col-md-6">
+          <p class="font-ket">Portofolio</p>
+          <img src="img/prog/prjProgramming1.png" alt="" class="border image-hover" width="350">
         </div>
       </div>
     </div>
