--- a/ui-ux.html
+++ b/ui-ux.html
@@ -30,7 +30,7 @@
                 </div>
               </div>
                 <a class="nav-item nav-link" href="mailto:fajarramdhan2018@gmail.com" target="_blank">Contact</a>
-              <a class="nav-item btn-biru" href="pdf/cv.pdf" target="_blank">Download CV</a>
+              <a class="nav-item btn-biru" href="pdf/Cv-MuhamadFajarRamdhanGinawan.pdf" target="_blank">Download CV</a>
             </div>
           </div>
         </div>
