--- a/photography.html
+++ b/photography.html
@@ -30,7 +30,7 @@
                 </div>
               </div>
                 <a class="nav-item nav-link" href="mailto:fajarramdhan2018@gmail.com" target="_blank">Contact</a>
-              <a class="nav-item btn-biru" href="pdf/cv.pdf" target="_blank">Download CV</a>
+              <a class="nav-item btn-biru" href="pdf/Cv-MuhamadFajarRamdhanGinawan.pdf" target="_blank">Download CV</a>
             </div>
           </div>
         </div>
@@ -53,28 +53,48 @@
           <div class="card-body">
             <div class="row ">
               <div class="col imgSmall"><img src="img/photo/photo.jpg" class="img-fluid"></div>
-              <div class="col imgSmall px-0"><img src="img/photo/photo3.JPG" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/photo3.JPG" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/photo2.jpg" class="img-fluid"></div>
             </div>
 
-            <div class="row mt-2">
+            <div class="row mt-3">
               <div class="col imgSmall"><img src="img/photo/photo5.jpg" class="img-fluid"></div>
-              <div class="col imgSmall px-0"><img src="img/photo/photo1.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/photo1.jpg" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/photo4.jpg" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/photo6.jpg" class="img-fluid"></div>
             </div>
 
-            <div class="row mt-2">
+            <div class="row mt-3">
               <div class="col imgSmall"><img src="img/photo/photo8.jpg" class="img-fluid"></div>
-              <div class="col imgSmall px-0"><img src="img/photo/photo7.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/photo7.jpg" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/photo9.jpg" class="img-fluid"></div>
             </div>
 
-            <div class="row mt-2">
+            <div class="row mt-3">
               <div class="col imgSmall"><img src="img/photo/10.jpg" class="img-fluid"></div>
-              <div class="col imgSmall px-0"><img src="img/photo/11.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/11.jpg" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/13.jpg" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/12.jpg" class="img-fluid"></div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col imgSmall"><img src="img/photo/14.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/15.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/16.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/17.jpg" class="img-fluid"></div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col imgSmall"><img src="img/photo/18.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/20.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/21.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/19.jpg" class="img-fluid"></div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col imgSmall"><img src="img/photo/23.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/24.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/22.jpg" class="img-fluid"></div>
             </div>
           </div>
         </div>
