--- a/photography.html
+++ b/photography.html
@@ -92,9 +92,9 @@
             </div>
 
             <div class="row mt-3">
-              <div class="col imgSmall"><img src="img/photo/23.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/23.JPG" class="img-fluid"></div>
               <div class="col imgSmall"><img src="img/photo/24.jpg" class="img-fluid"></div>
-              <div class="col imgSmall"><img src="img/photo/22.jpg" class="img-fluid"></div>
+              <div class="col imgSmall"><img src="img/photo/22.JPG" class="img-fluid"></div>
             </div>
           </div>
         </div>
